<resources>
    <string name="app_name">TourApp</string>
    <string name="Enter">Enter</string>
    <string name="tourPackage_app">TourApp</string>
    <string name="create_an_account">Create an account</string>
    <string name="welcome_to">Welcome to ..</string>
    <string name="let_s_take_a_trip_with_us">Let\'s take a great trip</string>
    <string name="enterUser">Enter user</string>
    <string name="enterPassword">Enter password</string>
    <string name="view_money"> View My Money </string>
    <string name="view_tour_package"> TourPackages available </string>
    <string name="view_history"> View My History </string>
    <string name="make_a_purchase"> Make a cart purchase </string>
    <string name="view_shopping_cart"> View My Shopping Cart </string>
    <string name="log_out_user"> Log Out User </string>
    <string name="select_this"> Return Menu </string>
    <string name="download_invoice"> Download Invoice </string>
    <string name="wallpaper_menu"> Wallpaper Travel </string>
    <string name="text_view"> Text view </string>
    <string name="Transportation"> Transportation </string>
    <string name="Duration"> Duration </string>
    <string name="image_view_tour_package"> Image View Tour Package </string>
    <string name="button_express_purchase_pro"> Express Purchase Pro </string>
    <string name="ivhistoryuser">ivHistoryUser</string>
    <string name="textview">TextView</string>
    <string name="tv_history2">TextView</string>
    <string name="tv_history3">TextView</string>
    <string name="tv_history4">TextView</string>
    <string name="tv_history5">TextView</string>
    <string name="iv_vueloavion">ivVueloAvion</string>
    <string name="buy">buy</string>
    <string name="textview_MenuPrincipal">MAIN MENU</string>
    <string name="your_purchase">Your Purchase :</string>
    <string name="your_shopping_cart">Your Shopping Cart :</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starsTourPackage">STARS :</string>
    <string name="details">Details</string>
    <string name="tv_yourMoney" />
    <string name="description">Description</string>
    <string name="logoShowMoney">logoShowMoney</string>
    <string name="iv_chanchodolar">iv_chanchodolar</string>
    <string name="iv_iconovueloavion">iv_iconovueloavion</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="ingrese_name">Enter your name</string>
    <string name="ingrese_nickname">Enter your nickname</string>
    <string name="ingrese_password">Enter your password</string>
    <string name="confirmar_password">Confirm password</string>
    <string name="ingrese_surname">Enter your surname</string>
    <string name="iv_chancho">iv_chancho</string>
    <string name="moneyHint">money</string>
    <string name="starsCart">STARS :</string>
    <string name="about_us">About us</string>
    <string name="log_out_item">Log Out</string>
    <string name="purchase_history_item">Purchase History</string>
    <string name="user_money_item">User Money</string>
    <string name="user_profile_item">User profile</string>
    <string name="profile">Profile:</string>
    <string name="user_name">Name:</string>
    <string name="user_surname">Surname:</string>
    <string name="user_account_create">Account creation date:</string>
    <string name="user_purchases_made">Purchases made so far:</string>
    <string name="tv_userProfileName">TextView</string>
    <string name="tv_userProfileSurname">TextView</string>
    <string name="tv_userProfileAccount">TextView</string>
    <string name="tv_userProfilePurchases">TextView</string>
    <string name="tv_about_us_title">About TourApp</string>
    <string name="tv_info_version">App Version</string>
    <string name="tv_about_us">ABOUT US</string>
    <string name="tv_poweredby">Powered By</string>
    <string name="iv_android_logo">Android Logo</string>
    <string name="iv_besharp_album">The Be Sharp Album</string>
    <string name="ivUserProfile">ivUserProfile</string>
</resources>