<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/russian_violet">

    <TextView
        android:id="@+id/tv_historyPurchasePrice"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/tv_history5"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.510" />

    <TextView
        android:id="@+id/tv_historyPurchaseDate"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/tv_history4"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <TextView
        android:id="@+id/tv_historyPurchaseCode"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/tv_history3"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.360" />

    <TextView
        android:id="@+id/tv_historyPackageName"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/tv_history2"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <TextView
        android:id="@+id/tv_historyWelcomeMessage"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:fontFamily="@font/paytone_one"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.180" />

    <Button
        android:id="@+id/btnSelectInvoice"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/crazy_magenta"
        android:fontFamily="@font/baloo_bhai_2_medium"
        android:text="@string/download_invoice"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/recibo"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.910"
        app:strokeColor="@color/light_coral"
        app:strokeWidth="4dp" />

    <ImageView
        android:id="@+id/iv_historyPurchaseImage"
        android:layout_width="350dp"
        android:layout_height="190dp"
        android:contentDescription="@string/ivhistoryuser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="140dp"
        android:contentDescription="@string/iv_vueloavion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/viajar"
        tools:srcCompat="@drawable/viajar" />
</androidx.constraintlayout.widget.ConstraintLayout>