<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/russian_violet"
    android:backgroundTint="@color/russian_violet"
    tools:context=".TheBorbotonesAboutUs">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_about_us"
        android:textColor="#607D8B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <ImageView
        android:id="@+id/iv_logo_about_android"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:contentDescription="@string/iv_android_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/androide"
        tools:srcCompat="@drawable/androide" />

    <TextView
        android:id="@+id/tv_info_version"
        android:layout_width="220dp"
        android:layout_height="240dp"
        android:background="@drawable/style_bord_textview2"
        android:fontFamily="@font/baloo_bhai_2_medium"
        android:text="@string/tv_info_version"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/tv_about_us_title"
        android:layout_width="385dp"
        android:layout_height="60dp"
        android:background="@drawable/style_bord_textview2"
        android:fontFamily="@font/paytone_one"
        android:gravity="bottom|center"
        android:text="@string/tv_about_us_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tv_poweredby"
        android:layout_width="385dp"
        android:layout_height="120dp"
        android:background="@drawable/style_bord_textview2"
        android:text="@string/tv_poweredby"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <ImageView
        android:id="@+id/iv_besharps_album"
        android:layout_width="411dp"
        android:layout_height="255dp"
        android:contentDescription="@string/iv_besharp_album"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        app:srcCompat="@drawable/captura2"
        tools:srcCompat="@drawable/captura2" />
</androidx.constraintlayout.widget.ConstraintLayout>