<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logoPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:background="@drawable/style_bord_textview3"
        android:fontFamily="@font/rammetto_one"
        android:gravity="center"
        android:text="@string/Enter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logoPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintVertical_bias="0.670" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="415dp"
        android:layout_height="162dp"
        android:fontFamily="@font/rammetto_one"
        android:gravity="center"
        android:text="@string/tourPackage_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        android:textSize="68sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logoPrincipal"
        app:layout_constraintVertical_bias="0.115"
        tools:visibility="visible"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:background="@drawable/style_bord_textview3"
        android:fontFamily="@font/rammetto_one"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintVertical_bias="0.870" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="312dp"
        android:layout_height="66dp"
        android:fontFamily="@font/paytone_one"
        android:gravity="center"
        android:text="@string/welcome_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logoPrincipal"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_miniMessage"
        android:layout_width="334dp"
        android:layout_height="52dp"
        android:autoSizeTextType="none"
        android:fontFamily="@font/paytone_one"
        android:gravity="center"
        android:text="@string/let_s_take_a_trip_with_us"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintVertical_bias="0.020" />

    <EditText
        android:id="@+id/et_nickName"
        style="@android:style/Widget.Holo.AutoCompleteTextView"
        android:layout_width="407dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="@font/rammetto_one"
        android:gravity="center"
        android:hint="@string/enterUser"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logoPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logoPrincipal"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="412dp"
        android:layout_height="67dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:fontFamily="@font/rammetto_one"
        android:gravity="center"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_logoPrincipal"
        app:layout_constraintVertical_bias="0.631"
        tools:ignore="VisualLintBounds,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>