<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/russian_violet"
    android:backgroundTint="@color/russian_violet"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:background="@drawable/style_bord_textview2"
        android:fontFamily="@font/paytone_one"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:background="@drawable/style_bord_textview"
        android:textColorHint="@color/cardview_dark_background"
        android:ems="10"
        android:fontFamily="@font/cabin_medium"
        android:hint="@string/confirmar_password"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.690"
        tools:visibility="visible"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pass1"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:background="@drawable/style_bord_textview"
        android:textColorHint="@color/cardview_dark_background"
        android:ems="10"
        android:fontFamily="@font/cabin_medium"
        android:hint="@string/ingrese_password"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.580"
        tools:visibility="visible"
        android:autofillHints="" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:background="@drawable/style_bord_textview"
        android:textColorHint="@color/cardview_dark_background"
        android:ems="10"
        android:fontFamily="@font/cabin_medium"
        android:hint="@string/ingrese_surname"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.470"
        tools:visibility="visible"
        android:autofillHints="" />

    <EditText
        android:id="@+id/name"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:background="@drawable/style_bord_textview"

        android:textColorHint="@color/cardview_dark_background"
        android:ems="10"
        android:fontFamily="@font/cabin_medium"
        android:hint="@string/ingrese_name"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.360"
        tools:visibility="visible"
        android:autofillHints="" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:background="@drawable/style_bord_textview"
        android:ems="10"
        android:fontFamily="@font/cabin_medium"
        android:hint="@string/ingrese_nickname"
        android:textColorHint="@color/cardview_dark_background"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250"
        tools:visibility="visible"
        android:autofillHints="" />

    <Button
        android:id="@+id/Register"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:background="@drawable/style_bord_textview2"
        android:fontFamily="@font/paytone_one"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922" />

    <ImageView
        android:id="@+id/iv_perfilusuario"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/perfilusuario"
        tools:srcCompat="@drawable/perfilusuario"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>